# ayon

./: .gitignore  README.md  develop-tests.py  pyproject.toml
ayon_tools/: __init__.py  __main__.py  addons.py  anatomy.py  attributes.py  auth.py  ayon_func.py  base_addon.py  base_shortcut_solver.py  bundles.py  cli.py  config.py  exceptipns.py  logging_setup.py  packages.py  repository.py  studio.py  tools.py
ayon_tools/addons/applications/: addon.py
ayon_tools/addons/applications/variants/: __init__.py  base.py  houdini.py  maya.py  nuke.py
ayon_tools/addons/core/: addon.py
ayon_tools/addons/trypublisher/: addon.py
ayon_tools/api/: __init__.py  addons.py  anatomy.py  attributes.py  auth.py  ayon_tools_addon.py  bundles.py  genral.py  installers.py  packages.py  projects.py  system.py
ayon_tools/commands/: apply.py  backup_restore.py  info.py  info_tools.py
ayon_tools/shortcut_solvers/: anatomy.py
ayon_tools/tests/: repo_test.py
ayon_tools/utils/: addon_tools.py  server_addon_tools.py
studio-settings-repository-example/: bundle.yml  server.yml
studio-settings-repository-example/addons/my_addon/: addon.py  attributes.yml
studio-settings-repository-example/projects/my_project/: apps.yml
tests/: backup_test.py  backup_tests.py  base_addon_test.py  conftest.py  repo_test.py  tools_test.py
